# GameProject

./: README.md
Server/Src/: .gitignore  CMakeLists.txt
Server/Src/0_RunBin/Proto/: gen_cpp.bat
Server/Src/0_RunBin/Proto/protoc-gen-cpp/: Game_Define.pb.cc  Msg_Bag.pb.h  Msg_Copy.pb.cc  Msg_Copy.pb.h  Msg_Game.pb.cc  Msg_Game.pb.h  Msg_ID.pb.h  Msg_LoginCltData.pb.h  Msg_LoginDBData.pb.cc  Msg_LoginDBData.pb.h  Msg_Move.pb.cc  Msg_RetCode.pb.cc  Msg_RetCode.pb.h
Server/Src/0_RunBin/linux_run/: 0_copy.sh  0_del.sh  servercfg.ini  startserver.sh  stopserver.sh
Server/Src/0_RunBin/win_run/: 0_copy.bat  0_del.bat  ProcessList.xml  StartServer.bat  servercfg.ini
Server/Src/1_Message/: Game_Define.pb.h  Msg_Bag.pb.cc  Msg_ID.pb.cc  Msg_LoginCltData.pb.cc  Msg_Move.pb.h
Server/Src/2_LogData/: LogStruct.h
Server/Src/2_PublicData/: SharedHeader.h
Server/Src/2_StaticData/: CppSQLite3.cpp  SkillStruct.h  StaticData.cpp  StaticStruct.h
Server/Src/2_WatcherClient/: WatcherClient.cpp
Server/Src/3_ServerEngine/: CMakeLists.txt  Connection.cpp  CrashReport.cpp  HttpParameter.cpp  Log.cpp  LuaManager.cpp  NetManager.cpp  ServiceBase.cpp
Server/Src/3_ServerEngine/Common/: AstarFinder.cpp  CommandLine.cpp  CommonConvert.cpp  CommonFunc.cpp  CommonSocket.cpp  ConfigFile.cpp  DFA.cpp  DataBuffer.cpp  SharedMemory.cpp  TimerManager.cpp
Server/Src/3_ServerEngine/DBInterface/: CppMysql.cpp  DBConnection.cpp  DBRecordSet.cpp  DBStoredProc.cpp
Server/Src/4_DBServer/: CMakeLists.txt  DBManager.cpp  DBManager.h  DBMsgHandler.cpp  DBWriterManager.cpp  GameService.cpp  Main.cpp
Server/Src/4_LogServer/: CMakeLists.txt  GameService.cpp  LogMsgHandler.cpp  Main.cpp
Server/Src/5_CenterServer/: CMakeLists.txt  CenterMsgHandler.cpp  GameService.cpp  LogicSvrMgr.cpp  Main.cpp
Server/Src/5_ProxyServer/: CMakeLists.txt  GameService.cpp  Main.cpp  ProxyMsgHandler.cpp  ProxyPlayerMgr.cpp
Server/Src/5_WatchServer/: CMakeLists.txt  GameService.cpp  Main.cpp  WatchMsgHandler.cpp
Server/Src/6_GameServer/: BuffObject.cpp  BulletObject.cpp  BulletObject.h  CMakeLists.txt  GameService.cpp  Grid.cpp  Grid.h  GridManager.cpp  Main.cpp  MapObject.cpp  MonsterCreator.cpp  Scene.cpp  Scene.h  SceneLogic_Arena.cpp  SceneLogic_Base.cpp  SceneLogic_Base.h  SceneLogic_City.cpp  SceneLogic_None.cpp  SceneLogic_Normal.cpp  SceneLogic_Team.cpp  SceneManager.cpp  SceneObject.cpp  SceneObject.h  SceneXmlMgr.cpp  SkillObject.cpp  WinCondition.cpp  WinCondition.h
Server/Src/7_AccountServer/: AccountManager.cpp  AccountMsgHandler.cpp  CMakeLists.txt  GameLogManager.cpp  GameLogManager.h  GameService.cpp  Main.cpp
Server/Src/7_LoginServer/: CMakeLists.txt  GameService.cpp  LogicSvrManager.cpp  LoginClientMgr.cpp  LoginMsgHandler.cpp  Main.cpp  WebCommandMgr.cpp
Server/Src/8_LogicServer/: ActivityManager.cpp  ActivityModule.cpp  BagModule.cpp  CMakeLists.txt  CopyModule.cpp  CounterModule.cpp  DataPool.cpp  EquipModule.cpp  EquipModule.h  EventManager.cpp  FriendModule.cpp  GameLogManager.cpp  GameLogManager.h  GameService.cpp  GameSvrMgr.cpp  GameSvrMgr.h  GemModule.cpp  GemModule.h  GlobalDataMgr.cpp  Guild.cpp  GuildManager.cpp  LogicMsgHandler.cpp  LoginCodeMgr.cpp  MailManager.cpp  MailModule.cpp  MailModule.h  Main.cpp  ModuleBase.cpp  ModuleBase.h  MountModule.cpp  MountModule.h  PartnerModule.cpp  PartnerModule.h  PayManager.cpp  PetModule.cpp  PlayerManager.cpp  PlayerObject.cpp  PlayerObject.h  RankMananger.cpp  RoleModule.cpp  (+9 more)
Server/Src/9_ThirdPart/Protobuf/: CMakeLists.txt
Server/Src/9_ThirdPart/Protobuf/google/protobuf/: repeated_field.h
Server/Src/9_ThirdPart/SQLite/: CMakeLists.txt  sqlite3.h
